# HomeAssign

./: .gitignore  CODE_DOCUMENTATION.md  DEPLOYMENT.md  README.md  Run.md  onboard.md  start-services.sh  stop-services.sh  test-suite.sh
AIService/: .dockerignore  .env  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  rotate_keys.py  test_product_page_reviewer.py
AIService/ai_service/: __init__.py  backends.py  config.py  models.py  routes.py  services.py
FrontendService/: Dockerfile  package-lock.json  package.json
FrontendService/src/: App.css  App.tsx
FrontendService/src/components/: AnalysisDisplay.css  AnalysisDisplay.tsx  UrlInput.css  UrlInput.tsx
FrontendService/src/services/: api.ts
FrontendService/src/types/: scraper.ts
MainService/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json
MainService/public/: index.html
MainService/src/: index.ts
MainService/src/routes/: analyzer.ts  analyzer_secure.ts  scraper.ts
MainService/src/services/: aiClient.ts  scraper.ts  scraper_enhanced.ts  screenshotService.ts
frontend-service/: package.json
frontend-service/src/: App.css  App.tsx  index.css
frontend-service/src/components/: AnalysisDisplay.css  AnalysisDisplay.tsx  LoadingSpinner.css  LoadingSpinner.tsx  ScrapedContentDisplay.css  ScrapedContentDisplay.tsx  UrlInput.css
frontend-service/src/services/: api.ts
frontend-service/src/types/: scraper.ts
